tests/ecc-aws-538-ds_directory_not_open_to_large_scope/placebo-green/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "AWS created security group for d-90674d99ed directory controllers",
                "GroupName": "d-90674d99ed_controllers",
                "IpPermissions": [
                    {
                        "FromPort": 138,
                        "IpProtocol": "udp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 138,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 445,
                        "IpProtocol": "udp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 445,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 464,
                        "IpProtocol": "udp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 464,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 464,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 464,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 389,
                        "IpProtocol": "udp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 389,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 53,
                        "IpProtocol": "udp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 53,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 389,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 389,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 123,
                        "IpProtocol": "udp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 123,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": -1,
                        "IpProtocol": "icmp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": -1,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 445,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 445,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 1024,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 65535,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 3268,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 3269,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 88,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 88,
                        "UserIdGroupPairs": []
                    },
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-1234567asdfg",
                                "UserId": "111111111111"
                            }
                        ]
                    },
                    {
                        "FromPort": 135,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 135,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 636,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 636,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 53,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 53,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 88,
                        "IpProtocol": "udp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.2.0/24"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 88,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "111111111111",
                "GroupId": "sg-1234567asdfg",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-1234567asdfg",
                                "UserId": "111111111111"
                            }
                        ]
                    }
                ],
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-538-ds_directory_not_open_to_large_scope"
                    }
                ],
                "VpcId": "vpc-12345asdfg"
            }
        ],
        "ResponseMetadata": {}
    }
}
